--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hero Section with Navbar</title>
+  <title>sahih.ae</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
@@ -171,6 +172,64 @@
     </div>
 
   </section>
+
+
+<!-- section 3 -->
+<!-- Features Section -->
+<section class="bg-white py-12 px-8 md:px-16">
+    <!-- Section Title -->
+    <div class="text-center mb-12">
+      <h2 class="text-3xl md:text-4xl font-bold">
+        <span class="underline underline-offset-8 decoration-[#e5c200]">Fea</span>tures
+      </h2>
+    </div>
+  
+    <!-- Grid Container -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <!-- Box 1 -->
+      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
+        <img src="/images/feature1.png" alt="Feature 1" class="w-16 h-16 mb-4">
+        <h3 class="text-lg font-semibold">Feature One</h3>
+        <p class="text-sm text-gray-600">This is a description of the first feature.</p>
+      </div>
+  
+      <!-- Box 2 -->
+      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
+        <img src="/images/feature2.png" alt="Feature 2" class="w-16 h-16 mb-4">
+        <h3 class="text-lg font-semibold">Feature Two</h3>
+        <p class="text-sm text-gray-600">This is a description of the second feature.</p>
+      </div>
+  
+      <!-- Box 3 -->
+      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
+        <img src="/images/feature3.png" alt="Feature 3" class="w-16 h-16 mb-4">
+        <h3 class="text-lg font-semibold">Feature Three</h3>
+        <p class="text-sm text-gray-600">This is a description of the third feature.</p>
+      </div>
+  
+      <!-- Box 4 -->
+      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
+        <img src="/images/feature4.png" alt="Feature 4" class="w-16 h-16 mb-4">
+        <h3 class="text-lg font-semibold">Feature Four</h3>
+        <p class="text-sm text-gray-600">This is a description of the fourth feature.</p>
+      </div>
+  
+      <!-- Box 5 -->
+      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
+        <img src="/images/feature5.png" alt="Feature 5" class="w-16 h-16 mb-4">
+        <h3 class="text-lg font-semibold">Feature Five</h3>
+        <p class="text-sm text-gray-600">This is a description of the fifth feature.</p>
+      </div>
+  
+      <!-- Box 6 -->
+      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
+        <img src="/images/feature6.png" alt="Feature 6" class="w-16 h-16 mb-4">
+        <h3 class="text-lg font-semibold">Feature Six</h3>
+        <p class="text-sm text-gray-600">This is a description of the sixth feature.</p>
+      </div>
+    </div>
+  </section>
+    
        
 <script src="script.js"></script>
 </body>
