--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sahih.ae</title>
+  <title>Sahih.ae - Digitize Your
+    Credentials</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.png">
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -185,49 +186,52 @@
     </div>
   
     <!-- Grid Container -->
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <!-- Box 1 -->
-      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
-        <img src="/images/feature1.png" alt="Feature 1" class="w-16 h-16 mb-4">
-        <h3 class="text-lg font-semibold">Feature One</h3>
-        <p class="text-sm text-gray-600">This is a description of the first feature.</p>
+      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
+        <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
+        <h3 class="text-lg font-semibold mb-2">Custom Certificate Design</h3>
+        <p class="text-xs text-gray-600 pr-3 pl-3">Create stunning, personalized certificates with our intuitive design tools. 
+        Customize every aspect to match your brand identity.</p>
       </div>
   
       <!-- Box 2 -->
-      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
-        <img src="/images/feature2.png" alt="Feature 2" class="w-16 h-16 mb-4">
-        <h3 class="text-lg font-semibold">Feature Two</h3>
-        <p class="text-sm text-gray-600">This is a description of the second feature.</p>
+      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
+        <img src="/images/bulk-assurance.png" alt="Feature 1" class="w-16 h-18 mb-4">
+        <h3 class="text-lg font-semibold mb-2">Bulk Issuance</h3>
+        <p class="text-xs text-gray-600 pr-3 pl-3">Issue multiple certificates simultaneously with our
+             efficient bulk upload and management system. </p>
       </div>
   
       <!-- Box 3 -->
-      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
-        <img src="/images/feature3.png" alt="Feature 3" class="w-16 h-16 mb-4">
-        <h3 class="text-lg font-semibold">Feature Three</h3>
-        <p class="text-sm text-gray-600">This is a description of the third feature.</p>
+      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
+        <img src="/images//qr-code.png" alt="Feature 1" class="w-16 h-16 mb-4">
+        <h3 class="text-lg font-semibold mb-2">QR Code Validation</h3>
+        <p class="text-xs text-gray-600 pr-3 pl-3">Implement secure, instant verification with unique QR codes. 
+            Ensure authenticity and prevent fraud with a single scan.</p>
       </div>
   
       <!-- Box 4 -->
-      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
-        <img src="/images/feature4.png" alt="Feature 4" class="w-16 h-16 mb-4">
-        <h3 class="text-lg font-semibold">Feature Four</h3>
-        <p class="text-sm text-gray-600">This is a description of the fourth feature.</p>
+      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
+        <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
+        <h3 class="text-lg font-semibold mb-2">Analytics and Reporting</h3>
+        <p class="text-xs text-gray-600 pr-3 pl-3">Gain insights with comprehensive analytics. Track certificate issuance,
+             verification rates, and user engagement in real-time.</p>
       </div>
-  
       <!-- Box 5 -->
-      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
-        <img src="/images/feature5.png" alt="Feature 5" class="w-16 h-16 mb-4">
-        <h3 class="text-lg font-semibold">Feature Five</h3>
-        <p class="text-sm text-gray-600">This is a description of the fifth feature.</p>
+      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
+        <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
+        <h3 class="text-lg font-semibold mb-2">Partner/Brand Management</h3>
+        <p class="text-xs text-gray-600 pr-3 pl-3">Seamlessly manage and collaborate with partners. Control access, 
+            set permissions, and scale your credential ecosystem.</p>
       </div>
-  
       <!-- Box 6 -->
-      <div class="shadow-lg bg-white rounded-lg flex flex-col items-center justify-center text-center h-[400px] w-[400px] mx-auto">
-        <img src="/images/feature6.png" alt="Feature 6" class="w-16 h-16 mb-4">
-        <h3 class="text-lg font-semibold">Feature Six</h3>
-        <p class="text-sm text-gray-600">This is a description of the sixth feature.</p>
+      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
+        <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
+        <h3 class="text-lg font-semibold mb-2">Analytics and Reporting</h3>
+        <p class="text-xs text-gray-600 pr-3 pl-3">Gain insights with comprehensive analytics. 
+            Track certificate issuance, verification rates, and user engagement in real-time.</p>
       </div>
-    </div>
   </section>
     
        
