feat:completed feature section added hover animations

--- a/index.html
+++ b/index.html
@@ -180,59 +180,68 @@
 <section class="bg-white py-12 px-8 md:px-16">
     <!-- Section Title -->
     <div class="text-center mb-12">
-      <h2 class="text-3xl md:text-4xl font-bold">
-        <span class="underline underline-offset-8 decoration-[#e5c200]">Fea</span>tures
-      </h2>
+        <h2 class="text-3xl md:text-4xl font-bold">
+            <span class="underline underline-offset-8 decoration-[#e5c200]">Fea</span>tures
+        </h2>
     </div>
-  
+
     <!-- Grid Container -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <!-- Box 1 -->
-      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
-        <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
-        <h3 class="text-lg font-semibold mb-2">Custom Certificate Design</h3>
-        <p class="text-xs text-gray-600 pr-3 pl-3">Create stunning, personalized certificates with our intuitive design tools. 
-        Customize every aspect to match your brand identity.</p>
-      </div>
-  
-      <!-- Box 2 -->
-      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
-        <img src="/images/bulk-assurance.png" alt="Feature 1" class="w-16 h-18 mb-4">
-        <h3 class="text-lg font-semibold mb-2">Bulk Issuance</h3>
-        <p class="text-xs text-gray-600 pr-3 pl-3">Issue multiple certificates simultaneously with our
-             efficient bulk upload and management system. </p>
-      </div>
-  
-      <!-- Box 3 -->
-      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
-        <img src="/images//qr-code.png" alt="Feature 1" class="w-16 h-16 mb-4">
-        <h3 class="text-lg font-semibold mb-2">QR Code Validation</h3>
-        <p class="text-xs text-gray-600 pr-3 pl-3">Implement secure, instant verification with unique QR codes. 
-            Ensure authenticity and prevent fraud with a single scan.</p>
-      </div>
-  
-      <!-- Box 4 -->
-      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
-        <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
-        <h3 class="text-lg font-semibold mb-2">Analytics and Reporting</h3>
-        <p class="text-xs text-gray-600 pr-3 pl-3">Gain insights with comprehensive analytics. Track certificate issuance,
-             verification rates, and user engagement in real-time.</p>
-      </div>
-      <!-- Box 5 -->
-      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
-        <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
-        <h3 class="text-lg font-semibold mb-2">Partner/Brand Management</h3>
-        <p class="text-xs text-gray-600 pr-3 pl-3">Seamlessly manage and collaborate with partners. Control access, 
-            set permissions, and scale your credential ecosystem.</p>
-      </div>
-      <!-- Box 6 -->
-      <div class="shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto">
-        <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
-        <h3 class="text-lg font-semibold mb-2">Analytics and Reporting</h3>
-        <p class="text-xs text-gray-600 pr-3 pl-3">Gain insights with comprehensive analytics. 
-            Track certificate issuance, verification rates, and user engagement in real-time.</p>
-      </div>
-  </section>
+        <!-- Box 1 -->
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+            <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
+            <h3 class="text-lg font-semibold mb-2">Custom Certificate Design</h3>
+            <p class="text-xs text-gray-600 px-3">Create stunning, personalized certificates with our intuitive design tools. Customize every aspect to match your brand identity.</p>
+        </div>
+
+        <!-- Box 2 -->
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+            <img src="/images/bulk-assurance.png" alt="Feature 2" class="w-16 h-18 mb-4">
+            <h3 class="text-lg font-semibold mb-2">Bulk Issuance</h3>
+            <p class="text-xs text-gray-600 px-3">Issue multiple certificates simultaneously with our efficient bulk upload and management system.</p>
+        </div>
+
+        <!-- Box 3 -->
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+            <img src="/images/qr-code.png" alt="Feature 3" class="w-16 h-16 mb-4">
+            <h3 class="text-lg font-semibold mb-2">QR Code Validation</h3>
+            <p class="text-xs text-gray-600 px-3">Implement secure, instant verification with unique QR codes. Ensure authenticity and prevent fraud with a single scan.</p>
+        </div>
+
+        <!-- Box 4 -->
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+            <img src="/images/security.png" alt="Feature 4" class="w-16 h-20 mb-4">
+            <h3 class="text-lg font-semibold mb-2">Security & Compliance</h3>
+            <p class="text-xs text-gray-600 px-3">Ensure data protection and meet industry standards. Our platform provides robust security measures and compliance protocols.</p>
+        </div>
+
+        <!-- Box 5 -->
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+            <img src="/images/partners.png" alt="Feature 5" class="w-28 h-18 mb-4">
+            <h3 class="text-lg font-semibold mb-2">Partner/Brand Management</h3>
+            <p class="text-xs text-gray-600 px-3">Seamlessly manage and collaborate with partners. Control access, set permissions, and scale your credential ecosystem.</p>
+        </div>
+
+        <!-- Box 6 -->
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+            <img src="/images/anlytics.png" alt="Feature 6" class="w-20 h-20 mb-4">
+            <h3 class="text-lg font-semibold mb-2">Analytics and Reporting</h3>
+            <p class="text-xs text-gray-600 px-3">Gain insights with comprehensive analytics. Track certificate issuance, verification rates, and user engagement in real-time.</p>
+        </div>
+    </div>
+
+    <!-- Explore All Features Button -->
+    <div class="flex justify-center mt-10">
+        <a href="#"
+            class="inline-flex items-center text-white px-6 py-3 text-sm font-medium rounded-lg shadow-lg transition-transform duration-300 hover:scale-105"
+            style="background: linear-gradient(90deg, #EFBF04 0%, #896D02 100%);">
+            Explore All Features
+            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+            </svg>
+        </a>
+    </div>
+</section>
     
        
 <script src="script.js"></script>
