--- a/index.html
+++ b/index.html
@@ -188,42 +188,42 @@
     <!-- Grid Container -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <!-- Box 1 -->
-        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg border border-yellow-200	 flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
             <img src="/images/custom-certificate.png" alt="Feature 1" class="w-16 h-20 mb-4">
             <h3 class="text-lg font-semibold mb-2">Custom Certificate Design</h3>
             <p class="text-xs text-gray-600 px-3">Create stunning, personalized certificates with our intuitive design tools. Customize every aspect to match your brand identity.</p>
         </div>
 
         <!-- Box 2 -->
-        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg border border-yellow-200 flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
             <img src="/images/bulk-assurance.png" alt="Feature 2" class="w-16 h-18 mb-4">
             <h3 class="text-lg font-semibold mb-2">Bulk Issuance</h3>
             <p class="text-xs text-gray-600 px-3">Issue multiple certificates simultaneously with our efficient bulk upload and management system.</p>
         </div>
 
         <!-- Box 3 -->
-        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg border border-yellow-200 flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
             <img src="/images/qr-code.png" alt="Feature 3" class="w-16 h-16 mb-4">
             <h3 class="text-lg font-semibold mb-2">QR Code Validation</h3>
             <p class="text-xs text-gray-600 px-3">Implement secure, instant verification with unique QR codes. Ensure authenticity and prevent fraud with a single scan.</p>
         </div>
 
         <!-- Box 4 -->
-        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg border border-yellow-200 flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
             <img src="/images/security.png" alt="Feature 4" class="w-16 h-20 mb-4">
             <h3 class="text-lg font-semibold mb-2">Security & Compliance</h3>
             <p class="text-xs text-gray-600 px-3">Ensure data protection and meet industry standards. Our platform provides robust security measures and compliance protocols.</p>
         </div>
 
         <!-- Box 5 -->
-        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg border border-yellow-200 flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
             <img src="/images/partners.png" alt="Feature 5" class="w-28 h-18 mb-4">
             <h3 class="text-lg font-semibold mb-2">Partner/Brand Management</h3>
             <p class="text-xs text-gray-600 px-3">Seamlessly manage and collaborate with partners. Control access, set permissions, and scale your credential ecosystem.</p>
         </div>
 
         <!-- Box 6 -->
-        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
+        <div class="feature-card shadow-lg shadow-amber-100 bg-white rounded-lg border border-yellow-200 flex flex-col items-center justify-center text-center h-[300px] w-[300px] mx-auto transform transition-transform duration-300 hover:scale-105">
             <img src="/images/anlytics.png" alt="Feature 6" class="w-20 h-20 mb-4">
             <h3 class="text-lg font-semibold mb-2">Analytics and Reporting</h3>
             <p class="text-xs text-gray-600 px-3">Gain insights with comprehensive analytics. Track certificate issuance, verification rates, and user engagement in real-time.</p>
@@ -240,6 +240,76 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
             </svg>
         </a>
+    </div>
+</section>
+
+
+<!-- section 4 -->
+<!-- Who Can Benefit Section -->
+<section class="bg-white py-12 px-8 md:px-16 bg-[#f4f1f1]">
+    <!-- Section Title -->
+    <div class="text-center mb-12">
+        <h2 class="text-3xl md:text-4xl font-bold">
+            <span class="underline underline-offset-8 decoration-[#e5c200]">Who Can</span> Benefit
+        </h2>
+    </div>
+
+    <!-- Options Grid -->
+    <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 mb-12">
+        <!-- Option 1: Companies -->
+        <button class="option-button  py-4 px-6 text-lg font-medium rounded-lg  select-option">
+            Companies
+        </button>
+
+        <!-- Option 2: Partners -->
+        <button class="option-button  py-4 px-6 text-lg font-medium rounded-lg  select-option">
+            Partners
+        </button>
+
+        <!-- Option 3: Educational Institutions -->
+        <button class="option-button  py-4 px-6 text-lg font-medium rounded-lg  select-option">
+            Educational Institutions
+        </button>
+
+        <!-- Option 4: Brands -->
+        <button class="option-button  py-4 px-6 text-lg font-medium rounded-lg  select-option">
+            Brands
+        </button>
+    </div>
+
+    <!-- Content for selected option (hidden by default) -->
+    <div class="selected-option-content hidden">
+        <!-- Image and text block -->
+        <div class="flex items-center justify-between mb-12">
+            <div class="w-1/3">
+                <img src="/images/company-image.png" alt="Companies" class="w-full h-auto">
+            </div>
+            <div class="w-2/3 pl-8">
+                <h3 class="text-2xl font-semibold mb-4">Streamline Credential Management and Verification</h3>
+                <p class="text-lg text-gray-600">Our platform helps you manage and verify credentials seamlessly, reducing paperwork and increasing efficiency for your team.</p>
+            </div>
+        </div>
+
+        <!-- Options with Checkboxes -->
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+            <!-- Option 1 -->
+            <div class="flex items-center space-x-4">
+                <input type="checkbox" class="checkbox w-6 h-6 text-green-500 border-gray-300 rounded-md" id="option1">
+                <label for="option1" class="text-lg">Option 1 Content</label>
+            </div>
+
+            <!-- Option 2 -->
+            <div class="flex items-center space-x-4">
+                <input type="checkbox" class="checkbox w-6 h-6 text-green-500 border-gray-300 rounded-md" id="option2">
+                <label for="option2" class="text-lg">Option 2 Content</label>
+            </div>
+
+            <!-- Option 3 -->
+            <div class="flex items-center space-x-4">
+                <input type="checkbox" class="checkbox w-6 h-6 text-green-500 border-gray-300 rounded-md" id="option3">
+                <label for="option3" class="text-lg">Option 3 Content</label>
+            </div>
+        </div>
     </div>
 </section>
     
