feat:added counter animation

--- a/src/index.html
+++ b/src/index.html
@@ -318,32 +318,31 @@
   <!-- Certificates Issued -->
   <div class="text-center">
     <img src="/images/certificate-issued.png" alt="Certificate Issued" class="w-24 h-24 mx-auto mb-4 object-contain">
-    <h1 class="text-4xl font-semibold">1000+</h1>
+    <h1 class="text-4xl font-semibold counter" data-target="1000" data-suffix="+">0</h1>
     <p>Certificates Issued</p>
   </div>
 
   <!-- Countries Served -->
   <div class="text-center">
     <img src="/images/gloabl-1000.png" alt="Countries Served" class="w-24 h-24 mx-auto mb-4 object-contain">
-    <h1 class="text-4xl font-semibold">100+</h1>
+    <h1 class="text-4xl font-semibold counter" data-target="100" data-suffix="+">0</h1>
     <p>Countries Served</p>
   </div>
 
   <!-- Trusted Companies -->
   <div class="text-center">
     <img src="/images/trusted-100.png" alt="Trusted Companies" class="w-24 h-24 mx-auto mb-4 object-contain">
-    <h1 class="text-4xl font-semibold">100+</h1>
+    <h1 class="text-4xl font-semibold counter" data-target="100" data-suffix="+">0</h1>
     <p>Trusted Companies</p>
   </div>
 
   <!-- Verification Accuracy -->
   <div class="text-center">
     <img src="/images/cerificate-1000.png" alt="Verification Accuracy" class="w-24 h-24 mx-auto mb-4 object-contain">
-    <h1 class="text-4xl font-semibold">99.9%</h1>
+    <h1 class="text-4xl font-semibold counter" data-target="99.9" data-suffix="%">0</h1>
     <p>Verification Accuracy</p>
   </div>
 </div>
-      
 
 <!-- User Review Section -->
 <div class="mt-16 px-4">
@@ -387,5 +386,6 @@
 
        
 <script src="./scripts/script.js"></script>
+<script src="./scripts/Animation.js"></script>
 </body>
 </html>
