faet:minor correction on footer

--- a/src/index.html
+++ b/src/index.html
@@ -459,11 +459,13 @@
 
 <!-- section 8  -->
 <!-- footer -->
-<footer class="relative bg-[#DACD98] w-full mb-20">
-  <div class="w-full  px-8 mx-auto max-w-7xl">
+<footer class="relative bg-[#DACD98] w-full mb-12">
+  <div class="w-full  px-8 mx-auto max-w-7xl pt-8">
     <div class="grid justify-between grid-cols-1 gap-4 md:grid-cols-2">
       <h5 class="mb-6 text-xl font-semibold text-slate-800">
-        SHAHIH
+        <div>
+          <img src="/images/logo3w.webp" alt="Logo-on-footer" class="h-10">
+        </div>
       </h5>
       <div class="grid justify-between grid-cols-3 gap-4">
         <ul>
@@ -505,16 +507,22 @@
             Support
           </p>
           <li>
-            <a href="#" class="block text-slate-800 py-1 hover:text-slate-500 focus:text-slate-500 text-sm">
-              phone: +91 9999999999
+            <a href="tel:+919999999999" class="block text-slate-800 py-1 hover:text-slate-500 focus:text-slate-500 text-sm">
+              <svg class="w-4 h-4 inline-block mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                <path fill-rule="evenodd" d="M21.005 15.249a15.02 15.02 0 0 1-2.97-.476 11.08 11.08 0 0 0-2.868-1.13c-.646-.48-1.19-.872-1.775-1.462a15.033 15.033 0 0 1-1.01-1.39c-.534-.636-.863-1.03-.79-1.777.212-1.571-.073-3.184-.788-4.434-.804-1.38-1.895-2.529-3.273-3.122-.6-.29-1.268-.565-1.968-.654-.455-.053-.912-.083-1.376-.098-.343-.011-.686.064-1.023.206-.246.1-.486.238-.734.352-.104.08-.213.165-.318.252-.72.588-.868 1.513-.597 2.271.228.591.538 1.116.928 1.538.345.35.748.72 1.198 1.057.715.598 1.488 1.122 2.334 1.351 1.54.327 3.212-.07 4.255-.658 1.009-.567 1.878-1.484 2.665-2.422 1.129-1.383 1.947-3.031 2.21-4.828a15.05 15.05 0 0 0-3.325-3.779c-.502-.295-1.05-.446-1.58-.46-.536.018-1.076.182-1.543.469-.423.251-.795.586-1.104.962-.08.117-.187.193-.299.287-.279.23-.574.469-.859.724-.564.453-1.199.822-1.85 1.131-.448.224-.888.451-1.33.671-.275.155-.562.316-.855.472-.52.26-1.048.52-1.567.799-.493.248-.986.497-1.476.749-.898.462-1.8.961-2.705 1.451-.204.101-.409.198-.615.297-.778.376-1.55.784-2.341 1.176-1.301.618-2.506 1.311-3.653 2.099-1.087.633-2.086 1.283-3.195 1.898.115 3.439 3.268 8.62 9.006 10.68 4.346 1.366 7.91.365 10.07-1.348 2.385-1.53 3.88-3.64 3.762-5.797-.013-.198.063-.373.139-.54.117-.293.245-.583.373-.864.174-.332.285-.673.43-1.014.044-.117.095-.23.15-.35.042-.081.08-.167.118-.251 0-.001-.011-.017-.016-.03z" clip-rule="evenodd"></path>
+              </svg>
+               +91 9999999999
             </a>
           </li>
           <li>
-            <a href="#" class="block text-slate-800 py-1 hover:text-slate-500 focus:text-slate-500 text-sm">
-              Mail: 6p5wW@examp.com
+            <a href="mailto:6p5wW@examp.com" class="block text-slate-800 py-1 hover:text-slate-500 focus:text-slate-500 text-sm">
+              <svg class="w-4 h-4 inline-block mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                <path fill-rule="evenodd" d="M12 3.5C6.48 3.5 2 7.98 2 12.5S6.48 21.5 12 21.5 22 17.02 22 12.5 17.52 3.5 12 3.5zM12 4.5c4.13 0 7.5 3.37 7.5 7.5S16.13 19.5 12 19.5 4.5 16.13 4.5 12 7.87 4.5 12 4.5zm-1.5 4.5h3v3h-3v-3zm-1.5 9h6v2h-6v-2z" clip-rule="evenodd"></path>
+              </svg>
+              6p5wW@examp.com
             </a>
           </li>
-        
+                  
         </ul>
       </div>
     </div>
