--- a/src/index.html
+++ b/src/index.html
@@ -70,33 +70,35 @@
 
 <!-- section 1 -->
 <!-- Hero Section -->
-<section class="flex flex-col md:flex-row items-center px-8 pt-3 py-12 font-medium relative">
+<section class="flex flex-col md:flex-row items-center  px-8 pt-3 py-12 font-medium relative">
   <!-- Left Content -->
   <div class="flex-1 space-y-4 z-10">
-    <h1 class="text-5xl md:text-7xl font-bold leading-tight pb-4">
+    <h1 class="text-5xl md:text-7xl font-bold leading-tight ">
       Digitize Your <br />
       <span class="text-transparent bg-clip-text bg-gradient-to-r from-[#e5c200] to-[#937601]">Credentials</span>
     </h1>
-    <p class="text-2xl pb-6">Issue, Verify, and Validate with Confidence</p>
+    <p class="text-2xl pb-4">Issue, Verify, and Validate with Confidence</p>
 
-    <!-- Buttons -->
-    <div class="flex space-x-4 pb-4 relative z-10">
-      <div class="relative">
-        <img src="/images/pattern.jpg" alt="Pattern" class="absolute top-0 left-0 w-24 h-24 md:w-32 md:h-32 z-0">
-        <button class="px-6 py-3 bg-gradient-to-r from-[#e5c200] to-[#b49900] rounded-md hover:opacity-90 relative z-10">
-          Get Started
-        </button>
-      </div>
-      <button class="px-6 py-3 border border-[#d7b42b] text-black rounded-md hover:bg-[#ab9025]">Verify Certificate</button>
-    </div>
+<!-- Buttons -->
+<div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 pb-4 relative z-10">
+  <div class="relative w-full md:w-auto">
+    <img src="/images/pattern.jpg" alt="Pattern" class="absolute top-0 left-0 w-24 h-24 md:w-32 md:h-32 z-0 md:block hidden">
+    <button class="w-full md:w-auto px-6 py-3 bg-gradient-to-r from-[#e5c200] to-[#b49900] rounded-md hover:opacity-90 relative z-10 text-center">
+      Get Started
+    </button>
+  </div>
+  <button class="w-full md:w-auto px-6 py-3 border border-[#d7b42b] text-black rounded-md hover:bg-[#ab9025]  duration-150 text-center">
+    Verify Certificate
+  </button>
+</div>
 
     <p class="text-lg pb-6 relative z-20">
       Join hundreds of companies issuing secure, digital credentials with ease
     </p>
 
     <!-- Links -->
-    <div class="flex space-x-6 text-lg font-bold">
-      <a href="#issue-certificate" class="hover:underline text-transparent bg-clip-text bg-gradient-to-r from-[#e5c200] to-[#b99503] flex items-center">
+    <div class="flex space-x-6 text-sm font-bold md:text-lg">
+      <a href="#issue-certificate" class="hover:underline text-transparent bg-clip-text bg-gradient-to-r from-[#e5c200] to-[#b99503] flex items-center ">
         Start Issuing Certificates
         <svg class="ml-2 w-6 h-6" fill="none" stroke="#e5c200" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"></path>
@@ -511,7 +513,7 @@
 
 <!-- section 8  -->
 <!-- footer -->
-<footer class="relative bg-[#DACD98] w-full mb-12">
+<footer class="relative bg-[#DACD98] w-full mb-4">
   <div class="w-full  px-8 mx-auto max-w-7xl pt-8">
     <div class="grid justify-between grid-cols-1 gap-4 md:grid-cols-2">
       <h5 class="mb-6 text-xl font-semibold text-slate-800">
