--- a/src/index.html
+++ b/src/index.html
@@ -135,56 +135,57 @@
   <div class="flex flex-col md:flex-row items-start md:items-center md:justify-start gap-8">
 
       <!-- Left Side Image -->
-          <picture>
-              <!-- WebP Image (for browsers that support WebP) -->
-              <source srcset="/images/certificate.webp" type="image/webp">
-              <!-- PNG Image (fallback for browsers that don't support WebP) -->
-              <img src="/images/certificate.png" alt="How it works illustration" class="object-contain w-[100px] md:w-[200px]" loading="lazy">
-          </picture>
+      <picture class="hidden md:block">
+          <!-- WebP Image (for browsers that support WebP) -->
+          <source srcset="/images/certificate.webp" type="image/webp">
+          <!-- PNG Image (fallback for browsers that don't support WebP) -->
+          <img src="/images/certificate.png" alt="How it works illustration" class="object-contain w-[100px] md:w-[200px]" loading="lazy">
+      </picture>
 
       <!-- Steps Section -->
-      <div class="w-full md:w-2/3 flex justify-start">
-          <div class="grid grid-cols-2 md:grid-cols-4 gap-12 justify-items-start">
+      <div class="w-full mt-8 mb-4 md:w-2/3 flex flex-col items-center md:items-start">
+          <div class="grid grid-cols-1 md:grid-cols-4 gap-12 justify-items-center md:justify-items-start">
               <!-- Step 1 -->
               <div class="flex flex-col items-center">
                   <img src="/images/add.png" alt="Sign Up" class="w-24 h-24 md:w-[106px] md:h-[106px] mb-4">
                   <p class="text-sm font-medium text-gray-500">Step 01: <span class="text-lg font-semibold text-black">Sign up</span></p>
-                  <p class="text-sm">Create your account in a minute</p>
+                  <p class="text-sm text-center md:text-left">Create your account in a minute</p>
               </div>
 
               <!-- Step 2 -->
               <div class="flex flex-col items-center">
                   <img src="/images/document.png" alt="Create Template" class="w-24 h-24 md:w-[106px] md:h-[106px] mb-4">
                   <p class="text-sm font-medium text-gray-500">Step 02: <span class="text-lg font-semibold text-black">Create Templates</span></p>
-                  <p class="text-sm">Upload or design your certificate template</p>
+                  <p class="text-sm text-center md:text-left">Upload or design your certificate template</p>
               </div>
 
               <!-- Step 3 -->
               <div class="flex flex-col items-center">
                   <img src="/images/badge.png" alt="Issue Certificate" class="w-24 h-24 md:w-[106px] md:h-[106px] mb-4">
                   <p class="text-sm font-medium text-gray-500">Step 03: <span class="text-lg font-semibold text-black">Issue Certificates</span></p>
-                  <p class="text-sm">Issue secure certificates</p>
+                  <p class="text-sm text-center md:text-left">Issue secure certificates</p>
               </div>
 
               <!-- Step 4 -->
               <div class="flex flex-col items-center">
                   <img src="/images/approve.png" alt="Verify Certificate" class="w-24 h-24 md:w-[106px] md:h-[106px] mb-4">
                   <p class="text-sm font-medium text-gray-500">Step 04: <span class="text-lg font-semibold text-black">Verify Certificates</span></p>
-                  <p class="text-sm">Verify with confidence</p>
+                  <p class="text-sm text-center md:text-left">Verify with confidence</p>
               </div>
           </div>
       </div>
   </div>
 
-  <!-- Learn More Link -->
-  <div class="flex space-x-6 justify-center text-lg font-bold mt-4">
-      <a href="#issue-certificate" class="hover:underline text-transparent bg-clip-text bg-gradient-to-r from-[#e5c200] to-[#b99503] flex items-center">
-          Learn More about the process
-          <svg class="ml-2 w-6 h-6" fill="none" stroke="#e5c200" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"></path>
-          </svg>
-      </a>
-  </div>
+<!-- Learn More Link -->
+<div class="flex flex-col items-center mt-8">
+  <a href="#issue-certificate" class="text-lg font-bold hover:underline text-transparent bg-clip-text bg-gradient-to-r from-[#e5c200] to-[#b99503] flex items-center justify-center space-x-2">
+      <span>Learn More about the process</span>
+      <svg class="w-6 h-6" fill="none" stroke="#e5c200" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"></path>
+      </svg>
+  </a>
+</div>
+
 </section>
 
 <!-- section 3 -->
@@ -290,23 +291,23 @@
       </button>
   </div>
 
-  <!-- Content for selected option (hidden by default) -->
-  <div class="selected-option-content hidden max-w-6xl mx-auto" id="optionContent">
-      <!-- Image and text block -->
-      <div class="flex flex-col md:flex-row items-center justify-between mb-8 md:mb-12 gap-y-6 md:gap-x-8">
-          <div class="w-full md:w-1/3">
-              <img src="/images/img who can.png" alt="Option Image" class="w-full h-auto" id="optionImage" loading="lazy">
-          </div>
-          <div class="w-full md:w-2/3 pl-0 md:pl-8 mt-4 md:mt-0">
-              <h3 class="text-2xl font-semibold mb-6" id="optionTitle">
-                  Streamline Credential Management and Verification
-              </h3>
-              <div class="flex flex-col gap-6" id="optionDetails">
-                  <!-- Content will be dynamically updated here -->
-              </div>
+<!-- Content for selected option (hidden by default) -->
+<div class="selected-option-content hidden max-w-6xl mx-auto" id="optionContent">
+  <!-- Image and text block -->
+  <div class="flex flex-col md:flex-row items-center justify-between mb-8 md:mb-12 gap-y-6 md:gap-x-8">
+      <div class="w-full md:w-1/3">
+          <img src="" alt="Option Image" class="w-full h-auto" id="optionImage" loading="lazy">
+      </div>
+      <div class="w-full md:w-2/3 pl-0 md:pl-8 mt-4 md:mt-0">
+          <h3 class="text-2xl font-semibold mb-6" id="optionTitle">
+              Streamline Credential Management and Verification
+          </h3>
+          <div class="flex flex-col gap-6" id="optionDetails">
+              <!-- Content will be dynamically updated here -->
           </div>
       </div>
   </div>
+</div>
 
   <!-- Link for find the right solutions for you -->
   <div class="flex space-x-6 text-lg font-bold justify-center">
@@ -321,126 +322,101 @@
 
 <!-- section 5 -->
   <!-- Why Trust Us -->
-<section class="text-center py-12">
-  <div class="text-center mb-12">
-    <h2 class="text-3xl md:text-4xl font-bold">
-      <span class="underline underline-offset-8 decoration-[#e5c200]">Why </span>Trust Us
-    </h2>
-  </div>
-
-<!-- First Row of Images with Text -->
-<div class="flex flex-wrap justify-center gap-28 mb-24">
-  <!-- Certificates Issued -->
-  <div class="text-center">
-    <img src="/images/certificate-issued.png" alt="Certificate Issued" class="w-24 h-24 mx-auto mb-4 object-contain">
-    <h1 class="text-4xl font-semibold counter" data-target="1000" data-suffix="+">0</h1>
-    <p>Certificates Issued</p>
-  </div>
-
-  <!-- Countries Served -->
-  <div class="text-center">
-    <img src="/images/gloabl-1000.png" alt="Countries Served" class="w-24 h-24 mx-auto mb-4 object-contain">
-    <h1 class="text-4xl font-semibold counter" data-target="100" data-suffix="+">0</h1>
-    <p>Countries Served</p>
-  </div>
-
-  <!-- Trusted Companies -->
-  <div class="text-center">
-    <img src="/images/trusted-100.png" alt="Trusted Companies" class="w-24 h-24 mx-auto mb-4 object-contain">
-    <h1 class="text-4xl font-semibold counter" data-target="100" data-suffix="+">0</h1>
-    <p>Trusted Companies</p>
-  </div>
-
-  <!-- Verification Accuracy -->
-  <div class="text-center">
-    <img src="/images/cerificate-1000.png" alt="Verification Accuracy" class="w-24 h-24 mx-auto mb-4 object-contain">
-    <h1 class="text-4xl font-semibold counter" data-target="99.9" data-suffix="%">0</h1>
-    <p>Verification Accuracy</p>
-  </div>
-</div>
-
-
-
-<!-- testimonial -->
-
-<div class="relative w-full overflow-hidden">
-  <!-- Slider Container (centered) -->
-  <div id="reviewSlider" class="flex items-center justify-center transition-transform duration-500 ease-in-out">
-    <!-- Box 1 -->
-    <div class="testimonial w-1/3 flex-shrink-0 px-4 text-center">
-      <div class="bg-white shadow-md rounded-lg p-6 relative">
-        <img
-          src="/images/testimonial-profilepicture.png"
-          alt="Author profile"
-          class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8"
-        />
-        <p class="italic text-gray-700 mt-4">
-          "This platform made it easier for us to verify credentials."
-        </p>
-        <p class="mt-4 font-semibold">John Doe</p>
-        <p class="text-sm text-gray-500">Founder, WebTech Solutions</p>
+  <section class="text-center py-12">
+    <div class="text-center mb-12">
+      <h2 class="text-3xl md:text-4xl font-bold">
+        <span class="underline underline-offset-8 decoration-[#e5c200]">Why </span>Trust Us
+      </h2>
+    </div>
+  
+    <!-- First Row of Images with Text -->
+    <div class="flex flex-wrap justify-center gap-8 md:gap-28 mb-24">
+      <!-- Certificates Issued -->
+      <div class="text-center w-40 md:w-auto">
+        <img src="/images/certificate-issued.png" alt="Certificate Issued" class="w-16 h-16 md:w-24 md:h-24 mx-auto mb-4 object-contain">
+        <h1 class="text-2xl md:text-4xl font-semibold counter" data-target="1000" data-suffix="+">0</h1>
+        <p class="text-sm md:text-base">Certificates Issued</p>
+      </div>
+  
+      <!-- Countries Served -->
+      <div class="text-center w-40 md:w-auto">
+        <img src="/images/gloabl-1000.png" alt="Countries Served" class="w-16 h-16 md:w-24 md:h-24 mx-auto mb-4 object-contain">
+        <h1 class="text-2xl md:text-4xl font-semibold counter" data-target="100" data-suffix="+">0</h1>
+        <p class="text-sm md:text-base">Countries Served</p>
+      </div>
+  
+      <!-- Trusted Companies -->
+      <div class="text-center w-40 md:w-auto">
+        <img src="/images/trusted-100.png" alt="Trusted Companies" class="w-16 h-16 md:w-24 md:h-24 mx-auto mb-4 object-contain">
+        <h1 class="text-2xl md:text-4xl font-semibold counter" data-target="100" data-suffix="+">0</h1>
+        <p class="text-sm md:text-base">Trusted Companies</p>
+      </div>
+  
+      <!-- Verification Accuracy -->
+      <div class="text-center w-40 md:w-auto">
+        <img src="/images/cerificate-1000.png" alt="Verification Accuracy" class="w-16 h-16 md:w-24 md:h-24 mx-auto mb-4 object-contain">
+        <h1 class="text-2xl md:text-4xl font-semibold counter" data-target="99.9" data-suffix="%">0</h1>
+        <p class="text-sm md:text-base">Verification Accuracy</p>
       </div>
     </div>
-
-    <!-- Box 2 -->
-    <div class="testimonial w-1/3 flex-shrink-0 px-4 text-center">
-      <div class="bg-white shadow-md rounded-lg p-6 relative">
-        <img
-          src="/images/testimonial-profilepicture.png"
-          alt="Author profile"
-          class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8"
-        />
-        <p class="italic text-gray-700 mt-4">
-          "The verification process has never been so easy and seamless."
-        </p>
-        <p class="mt-4 font-semibold">Sarah Johnson</p>
-        <p class="text-sm text-gray-500">HR Director, TechInnovate Solutions</p>
+  
+    <!-- Testimonial -->
+    <div class="relative flex items-center justify-center overflow-hidden mb-24">
+      <div id="reviewSlider" class="flex flex-col md:flex-row transition-transform duration-500 ease-in-out">
+        <!-- Box 1 -->
+        <div class="testimonial w-full md:w-1/3 px-4 text-center mb-6 md:mb-0">
+          <div class="bg-white shadow-md rounded-lg p-6 relative">
+            <img src="/images/testimonial-profilepicture.png" alt="Author profile" class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8">
+            <p class="italic text-gray-700 mt-4">"The verification process has never been so easy and seamless."</p>
+            <p class="mt-4 font-semibold">Sarah Johnson</p>
+            <p class="text-sm text-gray-500">HR Director, TechInnovate Solutions</p>
+          </div>
+        </div>
+  
+        <!-- Box 2 -->
+        <div class="testimonial w-full md:w-1/3 px-4 text-center mb-6 md:mb-0">
+          <div class="bg-white shadow-md rounded-lg p-6 relative">
+            <img src="/images/testimonial-profilepicture.png" alt="Author profile" class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8">
+            <p class="italic text-gray-700 mt-4">"The verification process has never been so easy and seamless."</p>
+            <p class="mt-4 font-semibold">Sarah Johnson</p>
+            <p class="text-sm text-gray-500">HR Director, TechInnovate Solutions</p>
+          </div>
+        </div>
+  
+        <!-- Box 3 -->
+        <div class="testimonial w-full md:w-1/3 px-4 text-center mb-6 md:mb-0">
+          <div class="bg-white shadow-md rounded-lg p-6 relative">
+            <img src="/images/testimonial-profilepicture.png" alt="Author profile" class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8">
+            <p class="italic text-gray-700 mt-4">"Amazing platform for managing and validating credentials!"</p>
+            <p class="mt-4 font-semibold">Emily Watson</p>
+            <p class="text-sm text-gray-500">HR Manager, GlobalTech Inc.</p>
+          </div>
+        </div>
       </div>
     </div>
-
-    <!-- Box 3 -->
-    <div class="testimonial w-1/3 flex-shrink-0 px-4 text-center">
-      <div class="bg-white shadow-md rounded-lg p-6 relative">
-        <img
-          src="/images/testimonial-profilepicture.png"
-          alt="Author profile"
-          class="w-16 h-16 rounded-full border-4 border-gray-200 mx-auto -mt-8"
-        />
-        <p class="italic text-gray-700 mt-4">
-          "Amazing platform for managing and validating credentials!"
-        </p>
-        <p class="mt-4 font-semibold">Emily Watson</p>
-        <p class="text-sm text-gray-500">HR Manager, GlobalTech Inc.</p>
+  
+    <!-- Trusted by Leading Companies -->
+    <h3 class="text-2xl md:text-3xl font-semibold">
+      Trusted by Leading Companies <span class="text-[#e5c200]">Worldwide</span>
+    </h3>
+    <div class="overflow-hidden mt-8 mb-2">
+      <div class="marquee flex gap-8">
+        <!-- Logos -->
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 1.png" alt="Company 1"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 2.png" alt="Company 2"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 3.png" alt="Company 3"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 5.png" alt="Company 4"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 6.png" alt="Company 5"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 1.png" alt="Company 1"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 2.png" alt="Company 2"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 3.png" alt="Company 3"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 5.png" alt="Company 4"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 6.png" alt="Company 5"></div>
       </div>
     </div>
-
-    <!-- Add More Testimonials -->
-  </div>
-</div>
-
-
-
-<!-- Trusted by Leading Companies -->
-<h3 class="text-3xl mt-16 font-semibold">Trusted by Leading Companies <span class="text-[#e5c200]">Worldwide</span> </h3>
-<div class="overflow-hidden mt-8">
-  <div class="marquee">
-    <!-- Logos -->
-    <div class="logo-card"><img src="/images/logo-companies 1.png" alt="Company 1"></div>
-    <div class="logo-card"><img src="/images/logo-companies 2.png" alt="Company 2"></div>
-    <div class="logo-card"><img src="/images/logo-companies 3.png" alt="Company 3"></div>
-    <div class="logo-card"><img src="/images/logo-companies 5.png" alt="Company 4"></div>
-    <div class="logo-card"><img src="/images/logo-companies 6.png" alt="Company 5"></div>
-    <!-- Duplicate logos for seamless effect -->
-    <div class="logo-card"><img src="/images/logo-companies 1.png" alt="Company 1"></div>
-    <div class="logo-card"><img src="/images/logo-companies 2.png" alt="Company 2"></div>
-    <div class="logo-card"><img src="/images/logo-companies 3.png" alt="Company 3"></div>
-    <div class="logo-card"><img src="/images/logo-companies 5.png" alt="Company 4"></div>
-    <div class="logo-card"><img src="/images/logo-companies 6.png" alt="Company 5"></div>
-  </div>
-</div>
-</section>
-
-
+    
+  </section>
+  
 <!-- section 6 -->
 <!-- pricing -->
 <section class="relative">
