--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
     <!-- Desktop Buttons -->
     <div class="hidden md:flex space-x-4">
-      <button class="px-10 py-2 border border-amber-600 rounded-md font-semibold hover:bg-gradient-to-r from-[#e5c200] to-[#b99503]  hover:text-black transition duration-300 ease-in-out">Login</button>
+     <a href="login.html"> <button class="px-10 py-2 border border-amber-600 rounded-md font-semibold hover:bg-gradient-to-r from-[#e5c200] to-[#b99503]  hover:text-black transition duration-300 ease-in-out">Login</button></a>
       <button class="px-10 py-2 bg-gradient-to-r from-[#e5c200] to-[#b99503] rounded-md hover:opacity-90 font-semibold">Register</button>
     </div>
 
@@ -649,10 +649,6 @@
     </div>
   </div>
 </footer>
-
-
-
-
 
 <!-- javascript modules are combined into script.js  -->
 <script type="module" src="scripts/Script.js"></script>
