--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,8 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden absolute top-16 left-0 w-full bg-white shadow-lg z-20 font-semibold">
       <div class="flex flex-col items-center space-y-4 py-4">
-        <a href="#home" class="hover:text-amber-500 ">Home</a>
-        <a href="#about.html" class="hover:text-amber-500">About Us</a>
+        <a href="index.html" class="hover:text-amber-500 ">Home</a>
+        <a href="about.html" class="hover:text-amber-500">About Us</a>
         <a href="#features" class="hover:text-amber-500">Features</a>
         <a href="#pricing" class="hover:text-amber-500">Pricing</a>
         <a href="#verify" class="hover:text-amber-500">Verify Certificate</a>
