--- a/src/register.html
+++ b/src/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration</title>
+    <title>Sahih.ae - Digitize Your Credentials</title>
 
     <link rel="stylesheet" href="/dist/main.css">
     <link rel="stylesheet" href="styles/style.css">
